hotfix - fix spacing duplication across flavors

--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -6,3 +6,4 @@
 @import "forms/forms";
 @import "modules/modules";
 @import "ui/ui";
+@include make-space($space-values, $space-prefixes);
