--- a/src/scss/utility/_spacing.scss
+++ b/src/scss/utility/_spacing.scss
@@ -34,4 +34,5 @@ $space-prefixes : (
   }
 }
 
-@include make-space($space-values, $space-prefixes);
+
+
